Message can now be sent by web client, and received by server.

--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -211,7 +211,7 @@
     // Shared variables between Vue application and the protocol interface
     //
 
-    var connectionUrl = "http://127.0.0.1:7000/localhost/127.0.0.1";
+    var connectionUrl = "ws://127.0.0.1:7000/localhost/127.0.0.1";
     var descriptionChannelSubtype = "DESCRIPTION";
     var clientDataChannelSubtype = "ClientData";
 
