--- a/web/ui/index.html
+++ b/web/ui/index.html
@@ -178,22 +178,16 @@
     <div id="input-line">
         <textarea id="input-field"
                   v-model="inputLine"
-                  v-on:blur="lostFocus"
-                  v-on:focus="gotFocus"
                   v-bind:disabled="(! connectionState.established) || connectionState.blocked"
                   @keydown="submitEnter"
                   placeholder="Input Line"
                   rows="1"
                   style="resize: none;"></textarea>
         <button id="prev-button"
-                v-on:blur="lostFocus"
-                v-on:focus="gotFocus"
                 v-bind:disabled="(! connectionState.established) || connectionState.blocked"
                 title="See last text sent to server, only when input line is empty"
                 v-on:click="goPreviousInput">Prev</button>
         <button id="submit-button"
-                v-on:blur="lostFocus"
-                v-on:focus="gotFocus"
                 v-bind:disabled="(! connectionState.established) || connectionState.blocked"
                 v-on:click="submitText"
                 title="Sends text to server">{{displayState.sendButtonName}}</button>
@@ -271,6 +265,8 @@
         };
     // The initial title of this HTML Document
     var origTitle = document.title;
+    var playerName = "";
+    var locationName = "";
     // Frontmost item (index 0) is where user input goes to.
     var inputStack = [];
     var protocol = new TextgameProtocolClient();
@@ -280,6 +276,39 @@
     outputTextStore.mainOutput = [];
     outputTextStore.descOutput = [];
 
+    /**
+     * @private
+     * Sets the title for the document, whether or not it's in focus.
+     * This is normally not called directly by client code.
+     * @param {string} newTitle The new title for the document.
+     */
+    var setTitle = function(newTitle) {
+        origTitle = newTitle;
+
+        if (! displayState.hasFocus) {
+            document.title = "[! ACTIVITY DETECTED !] " + origTitle;
+        } else {
+            document.title = origTitle;
+        }
+    };
+
+    /**
+     * Sets the player name on the title.
+     * @param {string} newPlayerName The new name of the player
+     */
+    var setTitlePlayerName = function(newPlayerName) {
+        playerName = newPlayerName;
+        setTitle(playerName + "  /  " + locationName);
+    };
+
+    /**
+     * Sets the location name on the title.
+     * @param {string} newLocationName The new location name.
+     */
+    var setTitleLocationName = function(newLocationName) {
+        locationName = newLocationName;
+        setTitle(playerName + "  /  " + locationName);
+    };
 
     /**
      * Identifiers do eventually wrap.
@@ -411,7 +440,7 @@
      * @param {Object} data The client data.
      */
     var receiveClientData = function(id, data) {
-        // We only support match result right now
+        // We only support match result and location changes right now
         //
         if (data.messageType === "MatchNameResult") {
             if (data.securityViolation) {
@@ -430,6 +459,20 @@
                 }
             } else {
                 addAlert("Did not return result for look");
+            }
+        } else if (data.messageType === "LocationInfoChange") {
+            if (data.newRoomId) {
+                // We changed rooms.  Accept the room name even if empty.
+                //
+                if (data.newRoomName) {
+                    setTitleLocationName(data.newRoomName);
+                } else {
+                    setTitleLocationName("");
+                }
+            } else if (data.newRoomName) {
+                // We did not change rooms, but the name changed.
+                //
+                setTitleLocationName(data.newRoomName);
             }
         }
     };
@@ -480,6 +523,10 @@
         }
 
         window.onbeforeunload = null;
+
+        if (connectionState.authenticated) {
+            setTitle("DISCONNECTED: " + origTitle);
+        }
     };
 
     protocol.onError = function(errorText) {
@@ -490,6 +537,9 @@
         connectionState.authenticated = true;
         connectionState.authenticationInProgress = false;
         connectionState.authenticationMessage = "";
+
+        setTitlePlayerName(connectionState.username);
+
         connectionState.username = "";
         connectionState.password = "";
     };
@@ -705,11 +755,13 @@
                         [new ExternalPlainText(this.inputLine)];
                     this.inputStack[0].sendText(textAsExternal);
 
-                    this.prevLineIndex = 0;
-                    this.prevInputLines.splice(0, 0, this.inputLine);
+                    if (this.inputLine !== "") {
+                        this.prevLineIndex = 0;
+                        this.prevInputLines.splice(0, 0, this.inputLine);
 
-                    if (this.prevInputLines.length > 10) {
-                        this.prevInputLines.pop();
+                        if (this.prevInputLines.length > 10) {
+                            this.prevInputLines.pop();
+                        }
                     }
 
                     this.inputLine = "";
@@ -789,9 +841,12 @@
                     controlChannel.send.sendData(useExitRequest);
                 }
             }
+        },
+        mounted: function() {
+            window.onblur = this.lostFocus;
+            window.onfocus = this.gotFocus;
         }
     });
-
 
     // Everything has been set up and configured.
     // This connection will trigger populating the site list.
